<resources>
    <string name="app_name">Physicon</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_settings">Settings</string>
    <string name="topics">Topics</string>
    <string name="discussions">Discussion</string>
    <string name="askAQuestion">Ask a question</string>
    <string name="quiz">Quiz</string>
    <string name="bookmark">Bookmark</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="reference">References</string>
    <string name="confirm">CONFIRM</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="about_app">This app enables you carry basic physics topics in your android as well as Exam and Test questions.</string>
    <string name="grav_field">Gravitational\nField</string>
    <string name="elec_field">Electric Field</string>
    <string name="electrolysis">Electrolysis</string>
    <string name="ac_circuit">AC Circuit</string>
    <string name="elec_magnetic">Electromagnetic\nField</string>
    <string name="sound">Sound Waves</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_verify">Registration successful. A link has been sent to your email, click on the link to verify your email address.</string>
    <string name="prompt_password_2">Confirm password</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="forgot_password">Forgotten Password?</string>
    <string name="welcome">"Welcome"</string>

    <string name="ref1">All Inclusive Calculations in physics for Senior Secondary School Students by Solomon Dauda Yakwo</string>

</resources>
