<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:id="@+id/group">
                <item
                    android:id="@+id/nav_bookmark"
                    android:icon="@drawable/ic_action_bookmarks"
                    android:title="@string/bookmark" />

                <item
                    android:id="@+id/nav_quiz"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/quiz" />

                <item
                    android:id="@+id/nav_askAQuestion"
                    android:icon="@drawable/ic_action_ask"
                    android:title="@string/askAQuestion" />

                <item
                    android:id="@+id/nav_discussion"
                    android:icon="@drawable/ic_action_discussion"
                    android:title="@string/discussions" />
        </group>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_action_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_action_email"
            android:title="@string/contact" />
</menu>
