<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="monospace"
        android:gravity="center"
        android:textColor="#00704D"
        android:layout_marginTop="70dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_shape"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_btn"
        android:layout_marginBottom="30dp"
        android:text="@string/action_sign_in"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_shape"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/action_register"/>

</RelativeLayout>