<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/signin_bg"
    tools:context=".LoginActivity"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/signIn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no"
            android:textColor="@android:color/white"
            android:hint="@string/prompt_email"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:hint="@string/prompt_password"
            android:textColorHint="@android:color/white"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_shape"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signIn_layout"
        android:text="@string/action_sign_in"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Account"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:textColor="#00704D"
        android:layout_alignTop="@id/register_btn"
        android:layout_alignBottom="@id/register_btn"
        android:layout_toEndOf="@id/register_btn"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_action_add"
        app:backgroundTint="#43CEA2" />

</RelativeLayout>
