<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/content_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher"
        android:layout_alignBottom="@id/toolbar"
        android:layout_alignTop="@id/toolbar"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Choose a topic:"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/choose"
        android:background="#8CD3D3D3"
        android:layout_marginTop="5dp"
        android:scrollbars="none">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:rowOrderPreserved="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="navigate"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/oval_shape"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="start"
                        android:src="@mipmap/sound" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/sound"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/elec_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="navigate"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/oval_shape"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        android:src="@mipmap/electric" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/elec_field"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/elec_magnetic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="navigate"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/oval_shape"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        android:src="@mipmap/electromagnetic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/elec_magnetic"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/grav_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="navigate"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/oval_shape"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="start"
                        android:src="@mipmap/gravity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/grav_field"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/electrolysis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:onClick="navigate"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/oval_shape"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="start"
                        android:src="@mipmap/electrolysis" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/electrolysis"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ac_circuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:onClick="navigate"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/oval_shape"
                    android:contentDescription="Icons made by Pixel perfect from www.flaticon.com"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        android:src="@mipmap/ac_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/ac_circuit"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>
    </ScrollView>

</RelativeLayout>